--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^16.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
